# boost-dll-playground

./: CMakeLists.txt
src/: main.cpp  plugin.cpp  plugin.hpp
